@@ -411,6 +411,7 @@ struct lldpd_config {
 	int c_set_ifdescr;	 /* Set interface description */
 	int c_promisc;		 /* Interfaces should be in promiscuous mode */
 	int c_cap_advertise;	 /* Chassis capabilities advertisement */
+	int c_cap_override;	 /* Override chassis capabilities enabled */
 	int c_mgmt_advertise;	 /* Management addresses advertisement */
 
 #ifdef ENABLE_LLDPMED
